style(css): fix spacing in CSS apply directive and add new styles for image holder feat(ModelThreeSixty): add overflow-auto class to color selection for better layout handling

--- a/assets/css/components/index.css
+++ b/assets/css/components/index.css
@@ -62,7 +62,7 @@
   .swiper-pagination {
     gap: var(--swiper-pagination-gap, 12px);
 
-    @apply flex !bottom-10 justify-center md:!bottom-12;
+    @apply flex !bottom-10 justify-center md: !bottom-12;
   }
 
   .nuxt-loading-indicator {
@@ -80,5 +80,9 @@
 
   .p-datatable.p-datatable-striped .p-datatable-tbody>tr.p-row-even {
     @apply bg-background;
+  }
+
+  #threesixty-image-holder>div.jsv-show {
+    @apply !hidden !opacity-0;
   }
 }
